--- a/examples/mec_cetrification.ipynb
+++ b/examples/mec_cetrification.ipynb
@@ -117,7 +117,7 @@
        "<!-- 3 -->\n",
        "<g id=\"node4\" class=\"node\">\n",
        "<title>3</title>\n",
-       "<ellipse fill=\"#98f5ff\" stroke=\"#98f5ff\" cx=\"272\" cy=\"-294\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"darkslategrey\" stroke=\"darkslategrey\" cx=\"272\" cy=\"-294\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"272\" y=\"-290.3\" font-family=\"Times,serif\" font-size=\"14.00\">3</text>\n",
        "</g>\n",
        "<!-- 3&#45;&gt;1 -->\n",
@@ -137,7 +137,7 @@
        "<!-- 5 -->\n",
        "<g id=\"node5\" class=\"node\">\n",
        "<title>5</title>\n",
-       "<ellipse fill=\"darkslategrey\" stroke=\"darkslategrey\" cx=\"441\" cy=\"-202\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"#98f5ff\" stroke=\"#98f5ff\" cx=\"441\" cy=\"-202\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"441\" y=\"-198.3\" font-family=\"Times,serif\" font-size=\"14.00\">5</text>\n",
        "</g>\n",
        "<!-- 3&#45;&gt;5 -->\n",
@@ -225,7 +225,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f87945fd340>"
+       "<graphviz.graphs.Digraph at 0x7fc69c63b3b0>"
       ]
      },
      "execution_count": 3,
@@ -313,8 +313,8 @@
      "text": [
       "Component members:\n",
       "Component 0 = A: [7]\n",
-      "Component 1 = B: [3]\n",
-      "Component 2 = C: [5]\n",
+      "Component 1 = B: [5]\n",
+      "Component 2 = C: [3]\n",
       "Component 3 = D: [6]\n",
       "Component 4 = E: [4]\n",
       "Component 5 = F: [0, 1, 2]\n",
@@ -322,9 +322,9 @@
       "\n",
       "Index by state action:\n",
       " (from_component, q_action = original dtmc action code) <-> q_code\n",
-      "(B, 3) <-> 0\n",
+      "(C, 3) <-> 0\n",
       "(E, 4) <-> 1\n",
-      "(C, 5) <-> 2\n",
+      "(B, 5) <-> 2\n",
       "(D, 6) <-> 3\n",
       "(A, 7) <-> 4\n",
       "(F, 8) <-> 5\n",
@@ -345,43 +345,43 @@
        " viewBox=\"0.00 0.00 566.12 704.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 700)\">\n",
        "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-700 562.12,-700 562.12,4 -4,4\"/>\n",
-       "<!-- 1 -->\n",
+       "<!-- 2 -->\n",
        "<g id=\"node1\" class=\"node\">\n",
-       "<title>1</title>\n",
+       "<title>2</title>\n",
        "<ellipse fill=\"pink\" stroke=\"pink\" cx=\"27\" cy=\"-678\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"27\" y=\"-674.3\" font-family=\"Times,serif\" font-size=\"14.00\">B</text>\n",
+       "<text text-anchor=\"middle\" x=\"27\" y=\"-674.3\" font-family=\"Times,serif\" font-size=\"14.00\">C</text>\n",
        "</g>\n",
-       "<!-- 1&#45;3 -->\n",
+       "<!-- 2&#45;3 -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>1&#45;3</title>\n",
+       "<title>2&#45;3</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"97,-623 43,-623 43,-587 97,-587 97,-623\"/>\n",
        "<text text-anchor=\"middle\" x=\"70\" y=\"-600.6\" font-family=\"Times,serif\" font-size=\"18.00\">3</text>\n",
        "</g>\n",
-       "<!-- 1&#45;&gt;1&#45;3 -->\n",
+       "<!-- 2&#45;&gt;2&#45;3 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>1&#45;&gt;1&#45;3</title>\n",
+       "<title>2&#45;&gt;2&#45;3</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M36.76,-660.89C43.6,-649.6 52.72,-634.53 59.68,-623.04\"/>\n",
        "</g>\n",
-       "<!-- 2 -->\n",
+       "<!-- 1 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>2</title>\n",
+       "<title>1</title>\n",
        "<ellipse fill=\"pink\" stroke=\"pink\" cx=\"163\" cy=\"-513\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"163\" y=\"-509.3\" font-family=\"Times,serif\" font-size=\"14.00\">C</text>\n",
+       "<text text-anchor=\"middle\" x=\"163\" y=\"-509.3\" font-family=\"Times,serif\" font-size=\"14.00\">B</text>\n",
        "</g>\n",
-       "<!-- 2&#45;5 -->\n",
+       "<!-- 1&#45;5 -->\n",
        "<g id=\"node8\" class=\"node\">\n",
-       "<title>2&#45;5</title>\n",
+       "<title>1&#45;5</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"190,-458 136,-458 136,-422 190,-422 190,-458\"/>\n",
        "<text text-anchor=\"middle\" x=\"163\" y=\"-435.6\" font-family=\"Times,serif\" font-size=\"18.00\">5</text>\n",
        "</g>\n",
-       "<!-- 2&#45;&gt;2&#45;5 -->\n",
+       "<!-- 1&#45;&gt;1&#45;5 -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
-       "<title>2&#45;&gt;2&#45;5</title>\n",
+       "<title>1&#45;&gt;1&#45;5</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M163,-494.81C163,-483.65 163,-469.16 163,-458.03\"/>\n",
        "</g>\n",
-       "<!-- 1&#45;3&#45;&gt;2 -->\n",
+       "<!-- 2&#45;3&#45;&gt;1 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>1&#45;3&#45;&gt;2</title>\n",
+       "<title>2&#45;3&#45;&gt;1</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M73.79,-586.88C77.15,-575.04 83.11,-559.59 93,-549 102.91,-538.4 116.73,-530.55 129.47,-525.01\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"130.96,-528.18 138.93,-521.21 128.35,-521.69 130.96,-528.18\"/>\n",
        "<text text-anchor=\"middle\" x=\"158\" y=\"-554.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.3333333333</text>\n",
@@ -392,9 +392,9 @@
        "<ellipse fill=\"lightblue\" stroke=\"lightblue\" cx=\"92\" cy=\"-183\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"92\" y=\"-179.3\" font-family=\"Times,serif\" font-size=\"14.00\">F</text>\n",
        "</g>\n",
-       "<!-- 1&#45;3&#45;&gt;5 -->\n",
+       "<!-- 2&#45;3&#45;&gt;5 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>1&#45;3&#45;&gt;5</title>\n",
+       "<title>2&#45;3&#45;&gt;5</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M66.64,-586.82C63.4,-568.77 59,-539.5 59,-514 59,-514 59,-514 59,-274 59,-250.97 68.64,-226.54 77.5,-208.96\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"80.69,-210.42 82.28,-199.94 74.5,-207.14 80.69,-210.42\"/>\n",
        "<text text-anchor=\"middle\" x=\"124\" y=\"-389.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.6666666667</text>\n",
@@ -458,16 +458,16 @@
        "<polygon fill=\"black\" stroke=\"black\" points=\"180.5,-211.3 177,-201.3 173.5,-211.3 180.5,-211.3\"/>\n",
        "<text text-anchor=\"middle\" x=\"191.5\" y=\"-224.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.5</text>\n",
        "</g>\n",
-       "<!-- 2&#45;5&#45;&gt;1 -->\n",
+       "<!-- 1&#45;5&#45;&gt;2 -->\n",
        "<g id=\"edge8\" class=\"edge\">\n",
-       "<title>2&#45;5&#45;&gt;1</title>\n",
+       "<title>1&#45;5&#45;&gt;2</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M135.98,-451.61C100.87,-467.06 41.1,-499.41 16,-549 -0.26,-581.12 8.35,-623.61 16.94,-650.63\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"13.65,-651.83 20.18,-660.18 20.28,-649.58 13.65,-651.83\"/>\n",
        "<text text-anchor=\"middle\" x=\"30.5\" y=\"-554.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.5</text>\n",
        "</g>\n",
-       "<!-- 2&#45;5&#45;&gt;4 -->\n",
+       "<!-- 1&#45;5&#45;&gt;4 -->\n",
        "<g id=\"edge9\" class=\"edge\">\n",
-       "<title>2&#45;5&#45;&gt;4</title>\n",
+       "<title>1&#45;5&#45;&gt;4</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M177.74,-421.86C182.03,-416.38 186.5,-410.13 190,-404 195.09,-395.08 199.56,-384.75 203.12,-375.47\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"206.46,-376.51 206.6,-365.92 199.88,-374.11 206.46,-376.51\"/>\n",
        "<text text-anchor=\"middle\" x=\"213.5\" y=\"-389.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.5</text>\n",
@@ -496,9 +496,9 @@
        "<title>0&#45;&gt;0&#45;7</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M526.84,-524.9C544.96,-535.81 566.5,-553.2 554,-569 539.22,-587.69 471.7,-597.42 433.17,-601.54\"/>\n",
        "</g>\n",
-       "<!-- 0&#45;7&#45;&gt;2 -->\n",
+       "<!-- 0&#45;7&#45;&gt;1 -->\n",
        "<g id=\"edge14\" class=\"edge\">\n",
-       "<title>0&#45;7&#45;&gt;2</title>\n",
+       "<title>0&#45;7&#45;&gt;1</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M378.88,-602.18C345.91,-599.06 289.32,-590.76 246,-569 233.9,-562.92 234.01,-556.89 223,-549 213.39,-542.11 202.35,-535.37 192.38,-529.67\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"194.03,-526.58 183.59,-524.76 190.61,-532.69 194.03,-526.58\"/>\n",
        "<text text-anchor=\"middle\" x=\"311\" y=\"-554.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.3333333333</text>\n",
@@ -534,7 +534,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f874cded3a0>"
+       "<graphviz.graphs.Digraph at 0x7fc69c63b410>"
       ]
      },
      "execution_count": 6,
@@ -594,12 +594,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.          1.         -0.33333333  0.          0.         -0.66666667\n",
+      "[ 0.         -0.33333333  1.          0.          0.         -0.66666667\n",
       "  0.        ] * z >=  1.0\n",
       "[ 0.   0.   0.  -0.5  1.  -0.5  0. ] * z >=  1.0\n",
-      "[ 0.  -0.5  1.   0.  -0.5  0.   0. ] * z >=  1.0\n",
+      "[ 0.   1.  -0.5  0.  -0.5  0.   0. ] * z >=  1.0\n",
       "[ 0.  0.  0.  1. -1.  0.  0.] * z >=  1.0\n",
-      "[ 0.66666667  0.         -0.33333333 -0.33333333  0.          0.\n",
+      "[ 0.66666667 -0.33333333  0.         -0.33333333  0.          0.\n",
       "  0.        ] * z >=  1.0\n",
       "[ 0.  0.  0.  0.  0.  1. -1.] * z >=  1.0\n",
       "[1. 0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
@@ -618,7 +618,7 @@
       "[ 0.  0.  0.  0.  0.  0. -1.] * z >=  -1000000000.0\n",
       "\n",
       "\n",
-      "SolverResult(status=optimal, result_vector=[-9.99999994e+08 -9.99999997e+08 -9.99999995e+08 -9.99999995e+08\n",
+      "SolverResult(status=optimal, result_vector=[-9.99999994e+08 -9.99999995e+08 -9.99999997e+08 -9.99999995e+08\n",
       " -9.99999996e+08 -9.99999999e+08 -1.00000000e+09], value=-6999999975.8985)\n"
      ]
     }
@@ -657,9 +657,9 @@
      "output_type": "stream",
      "text": [
       "Multiply system Matrix with the certificate: \n",
-      "[[0.99999982]\n",
+      "[[0.99999988]\n",
       " [1.        ]\n",
-      " [1.00000012]\n",
+      " [1.00000006]\n",
       " [1.        ]\n",
       " [1.00099981]\n",
       " [1.        ]]\n",
@@ -684,7 +684,7 @@
      "output_type": "stream",
      "text": [
       "MEC quotient MPD EC-freeness certificate:\n",
-      "[-9.99999994e+08 -9.99999997e+08 -9.99999995e+08 -9.99999995e+08\n",
+      "[-9.99999994e+08 -9.99999995e+08 -9.99999997e+08 -9.99999995e+08\n",
       " -9.99999996e+08 -9.99999999e+08 -1.00000000e+09]\n",
       "\n",
       "\n",
@@ -1068,7 +1068,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f874c02ffe0>"
+       "<graphviz.graphs.Digraph at 0x7fc69c63be30>"
       ]
      },
      "execution_count": 13,
@@ -1398,7 +1398,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f874c079b20>"
+       "<graphviz.graphs.Digraph at 0x7fc6a09d82c0>"
       ]
      },
      "execution_count": 16,
@@ -1802,7 +1802,8 @@
     "\n",
     "print(components)\n",
     "print(proper_mecs)\n",
-    "print(mec_counter)"
+    "print(mec_counter)\n",
+    "\n"
    ]
   },
   {
@@ -1811,32 +1812,30 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m mec_certificate \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_mec_certificate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmdp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmecs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMEC quotient MPD EC-freeness certificate:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(mec_certificate[\u001b[38;5;241m0\u001b[39m])\n",
-      "File \u001b[0;32m~/anaconda3/envs/cenv/lib/python3.12/site-packages/switss-0.1-py3.12-linux-x86_64.egg/switss/certification/mec_certificates.py:132\u001b[0m, in \u001b[0;36mgenerate_mec_certificate\u001b[0;34m(amdp, mecs, certificate_bounds)\u001b[0m\n\u001b[1;32m    130\u001b[0m \u001b[38;5;66;03m# unite certificates\u001b[39;00m\n\u001b[1;32m    131\u001b[0m mec_certificate \u001b[38;5;241m=\u001b[39m (mec_quotient_ec_free_cert, mec_strongly_connected_cert)\n\u001b[0;32m--> 132\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m check_mec_certificate(amdp, mecs, mec_certificate)\n\u001b[1;32m    133\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m mec_certificate\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can not certify the MEC decomposition!\n",
+      "MEC certificate is valid: False\n"
      ]
     }
    ],
    "source": [
-    "mec_certificate = generate_mec_certificate(mdp, mecs)\n",
+    "try:\n",
+    "    mec_certificate = generate_mec_certificate(mdp, mecs)\n",
     "\n",
-    "print(\"MEC quotient MPD EC-freeness certificate:\")\n",
-    "print(mec_certificate[0])\n",
-    "print('\\n')\n",
+    "    print(\"MEC quotient MPD EC-freeness certificate:\")\n",
+    "    print(mec_certificate[0])\n",
+    "    print('\\n')\n",
     "\n",
-    "print(\"MEC strongly connected certificate:\")\n",
-    "print(\"fwd:\", mec_certificate[1][0])\n",
-    "print(\"bwd:\", mec_certificate[1][1]) \n",
-    "print('\\n')\n",
-    "\n",
-    "print(\"MEC certificate is valid:\", check_mec_certificate(mdp, mecs, mec_certificate))\n",
-    "print('\\n')"
+    "    print(\"MEC strongly connected certificate:\")\n",
+    "    print(\"fwd:\", mec_certificate[1][0])\n",
+    "    print(\"bwd:\", mec_certificate[1][1]) \n",
+    "    print('\\n')\n",
+    "except:\n",
+    "    print(\"Can not certify the MEC decomposition!\")\n",
+    "finally:\n",
+    "    print(\"MEC certificate is valid:\", check_mec_certificate(mdp, mecs, mec_certificate))"
    ]
   }
  ],
